fixing input color on mobile

--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -56,6 +56,7 @@
 
   .inputContainer input {
     width: 280px;
+    background-color: rgb(77, 77, 77);
   }
 
   .matchesContainer {
